# numc

./: .gitignore  README.md  a.out  a1.ll  cabal.project  cabal.project.local  hie.yaml  m2.ll  numc.cabal  shell.nix  test.ll  test1.ll  test1.s  test2.ll  test2.s
app/: Main.hs  Numc.hs  Numi.hs
src/: Numc.hs
src/Numc/: AST.hs  Codegen.hs  Compiler.hs  Example.hs  JIT.hs  Parser.hs
test/: AST.hs  Compiler.hs  Main.hs  Parser.hs
test/examples/: a2.n  a3.n  a4.n  b20.n  b6.n  e1.n  e2.n  e4.n  e5.n  f1.n  f2.n  f3.n  f4.n  m1.n  m2.n  m3.n  m4.n  m5.n  m6.n  m7.n
test/output/: a1.ll  a2.ll  b1.ll  b2.ll  b20.ll  b3.ll  b4.ll  b5.ll  b6.ll  f1.ll  m1.ll  m2.ll  m3.ll  m4.ll  m5.ll  m6.ll  v1.ll  v2.ll  val3.ll  w1.ll
