cabal-version:   3.8
name:            numc
version:         0.0.1.0
author:          vglfr
maintainer:      vf.velt@gmail.com

common common
  ghc-options:
    -Wall
    -Wcompat
    -Werror
    -Widentities
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base == 4.15.*
    , bytestring == 0.10.*
    , llvm-hs == 12.0.*
    , llvm-hs-pure == 12.0.*
--    , parsec == 3.1.*

library
  import:
    common
  exposed-modules:
      Numc.AST
    , Numc.Codegen
    , Numc.Example
  hs-source-dirs:
    src

executable numc
  import:
    common
  build-depends:
    numc
  hs-source-dirs:
    app
  main-is:
    Main.hs

test-suite numc-test
  import:
    common
  build-depends:
    numc
  hs-source-dirs:
    test
  main-is:
    Main.hs
  type:
    exitcode-stdio-1.0
