cabal-version:   3.8
name:            numc
version:         0.0.1.0
author:          vglfr
maintainer:      vf.velt@gmail.com

common common
  ghc-options:
    -Wall
    -Wcompat
    -Werror
    -Widentities
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base == 4.15.*
    , bytestring == 0.10.*
    , llvm-hs == 12.0.*
    , llvm-hs-pure == 12.0.*
    , process == 1.6.*
    , trifecta == 2.1.*

library
  import:
    common
  exposed-modules:
      Numc.AST
    , Numc.Codegen
    , Numc.Compiler
    , Numc.Example
    , Numc.Parser
  hs-source-dirs:
    src

executable nc
  import:
    common
  build-depends:
    numc
  hs-source-dirs:
    app
  main-is:
    Numc.hs

executable ni
  import:
    common
  build-depends:
    numc
  hs-source-dirs:
    app
  main-is:
    Numi.hs

test-suite numc
  import:
    common
  build-depends:
      numc
    , hspec == 2.8.*
  hs-source-dirs:
    test
  main-is:
    Main.hs
  type:
    exitcode-stdio-1.0
